<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    style="@style/backStyle">

    <Button
        android:id="@+id/button_1"
        android:text="@string/_1"
        android:onClick="button_onClick"
        style="@style/CenterButtonsStyle"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen"
        app:strokeColor="@color/button_stroke_color"
        app:strokeWidth="@dimen/button_stroke_width" />

    <Button
        android:id="@id/button_2"
        android:text="@string/_2"
        android:onClick="button_onClick"
        style="@style/CenterButtonsStyle"
        app:layout_constraintBottom_toBottomOf="@+id/button_1"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toTopOf="@+id/button_1"
        app:strokeColor="@color/button_stroke_color"
        app:strokeWidth="@dimen/button_stroke_width" />

    <Button
        android:id="@id/button_3"
        android:text="@string/_3"
        android:onClick="button_onClick"
        style="@style/CenterButtonsStyle"
        app:layout_constraintBottom_toBottomOf="@+id/button_2"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintTop_toTopOf="@+id/button_2"
        app:strokeColor="@color/button_stroke_color"
        app:strokeWidth="@dimen/button_stroke_width" />

    <Button
        android:id="@id/button_minus"
        android:onClick="button_onClick"
        android:text="@string/minus"
        style="@style/RightButtonsStyle"
        app:layout_constraintBottom_toBottomOf="@+id/button_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_3"
        app:layout_constraintTop_toTopOf="@+id/button_3"
        app:strokeColor="@color/button_stroke_color"
        app:strokeWidth="1dp" />

    <Button
        android:id="@id/button_4"
        android:text="@string/_4"
        android:onClick="button_onClick"
        style="@style/CenterButtonsStyle"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintEnd_toStartOf="@id/button_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_1"
        app:strokeColor="@color/button_stroke_color"
        app:strokeWidth="@dimen/button_stroke_width" />

    <Button
        android:id="@id/button_5"
        android:text="@string/_5"
        android:onClick="button_onClick"
        style="@style/CenterButtonsStyle"
        app:layout_constraintBottom_toBottomOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@id/button_6"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintTop_toTopOf="@+id/button_4"
        app:strokeColor="@color/button_stroke_color"
        app:strokeWidth="@dimen/button_stroke_width" />

    <Button
        android:id="@id/button_6"
        android:text="@string/_6"
        android:onClick="button_onClick"
        style="@style/CenterButtonsStyle"
        app:layout_constraintBottom_toBottomOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintTop_toTopOf="@+id/button_5"
        app:strokeColor="@color/button_stroke_color"
        app:strokeWidth="@dimen/button_stroke_width" />

    <Button
        android:id="@id/button_plus"
        android:text="@string/plus"
        android:onClick="button_onClick"
        style="@style/RightButtonsStyle"
        app:layout_constraintBottom_toBottomOf="@+id/button_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_6"
        app:layout_constraintTop_toTopOf="@+id/button_6"
        app:strokeColor="@color/button_stroke_color"
        app:strokeWidth="@dimen/button_stroke_width" />

    <Button
        android:id="@id/button_7"
        android:text="@string/_7"
        android:onClick="button_onClick"
        style="@style/CenterButtonsStyle"
        app:layout_constraintBottom_toTopOf="@+id/button_point"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_4"
        app:strokeColor="@color/button_stroke_color"
        app:strokeWidth="@dimen/button_stroke_width" />

    <Button
        android:id="@id/button_8"
        android:text="@string/_8"
        android:onClick="button_onClick"
        style="@style/CenterButtonsStyle"
        app:layout_constraintBottom_toBottomOf="@+id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintTop_toTopOf="@+id/button_7"
        app:strokeColor="@color/button_stroke_color"
        app:strokeWidth="@dimen/button_stroke_width" />

    <Button
        android:id="@id/button_9"
        android:text="@string/_9"
        android:onClick="button_onClick"
        style="@style/CenterButtonsStyle"
        app:layout_constraintBottom_toBottomOf="@+id/button_8"
        app:layout_constraintEnd_toStartOf="@+id/button_x"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintTop_toTopOf="@+id/button_8"
        app:strokeColor="@color/button_stroke_color"
        app:strokeWidth="@dimen/button_stroke_width" />

    <Button
        android:id="@id/button_x"
        android:text="@string/_x"
        android:onClick="button_onClick"
        style="@style/RightButtonsStyle"
        app:layout_constraintBottom_toBottomOf="@+id/button_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintTop_toTopOf="@+id/button_9"
        app:strokeColor="@color/button_stroke_color"
        app:strokeWidth="@dimen/button_stroke_width" />

    <Button
        android:id="@+id/button_point"
        android:text="@string/point"
        android:onClick="button_onClick"
        style="@style/CenterButtonsStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_7"
        app:strokeColor="@color/button_stroke_color"
        app:strokeWidth="@dimen/button_stroke_width" />
    <Button
        android:id="@id/button_0"
        android:text="@string/_0"
        android:onClick="button_onClick"
        style="@style/CenterButtonsStyle"
        app:layout_constraintBottom_toBottomOf="@+id/button_point"
        app:layout_constraintEnd_toStartOf="@id/button_enter"
        app:layout_constraintStart_toEndOf="@id/button_point"
        app:layout_constraintTop_toBottomOf="@+id/button_7"
        app:strokeColor="@color/button_stroke_color"
        app:strokeWidth="@dimen/button_stroke_width" />

    <Button
        android:id="@id/button_enter"
        android:text="@string/enter"
        android:onClick="button_onClick"
        style="@style/CenterButtonsStyle"
        app:layout_constraintBottom_toBottomOf="@+id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_slash"
        app:layout_constraintStart_toEndOf="@id/button_0"
        app:layout_constraintTop_toTopOf="@+id/button_0"
        app:strokeColor="@color/button_stroke_color"
        app:strokeWidth="@dimen/button_stroke_width" />

    <Button
        android:id="@id/button_slash"
        android:text="@string/slash"
        android:onClick="button_onClick"
        style="@style/RightButtonsStyle"
        app:layout_constraintBottom_toBottomOf="@+id/button_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_enter"
        app:layout_constraintTop_toBottomOf="@+id/button_9"
        app:strokeColor="@color/button_stroke_color"
        app:strokeWidth="@dimen/button_stroke_width" />

    <TextView
        android:id="@+id/screen"
        style="@style/ScreenStyle"
        app:layout_constraintBottom_toTopOf="@id/button_1"
        app:layout_constraintEnd_toEndOf="@id/button_3"
        app:layout_constraintStart_toStartOf="@id/button_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_back"
        android:onClick="button_onClick"
        android:text="@string/back"
        style="@style/RightButtonsStyle"
        android:textSize="@dimen/screen_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_2"
        app:layout_constraintEnd_toEndOf="@+id/button_minus"
        app:layout_constraintStart_toStartOf="@+id/button_minus"
        app:layout_constraintTop_toTopOf="@+id/screen"
        app:layout_constraintVertical_chainStyle="packed"
        app:strokeColor="@color/button_stroke_color"
        app:strokeWidth="@dimen/button_stroke_width" />

</androidx.constraintlayout.widget.ConstraintLayout>